--- a/pyproject.toml
+++ b/pyproject.toml
@@ -171,8 +171,10 @@ pandas = [
 ]
 # Pinned while validating Polars server-mode shim:
 # https://github.com/owenlamont/aiomoto/issues/48
+# Python 3.14 support tracked upstream:
+# https://github.com/pola-rs/polars/issues/25035
 polars = [
-    "polars>=1.36.1,<=1.36.1",
+    "polars>=1.36.1,<=1.36.1 ; python_full_version < '3.14'",
 ]
 
 [dependency-groups]
@@ -202,7 +204,9 @@ dev = [
     "moto[server]>=5.1.19 ; python_full_version < '3.14' or sys_platform != 'win32'",
     # Pinned while validating Polars server-mode shim:
     # https://github.com/owenlamont/aiomoto/issues/48
-    "polars>=1.36.1,<=1.36.1",
+    # Python 3.14 support tracked upstream:
+    # https://github.com/pola-rs/polars/issues/25035
+    "polars>=1.36.1,<=1.36.1 ; python_full_version < '3.14'",
 ]
 
 [build-system]
